@@ -1,4 +1,5 @@
 HEAD
+    + Environment variables named ANSTE_* are passed to setup scripts
     + Current scenario can be now shut down without specifying the name again
     + Check for unrecognized running VMs in anste-clean and added --force
       option to allow destroying them
